--- a/index.html
+++ b/index.html
@@ -2,8 +2,39 @@
 <html>
     <head>
         <title>Twice-Over</title>
+        <link rel="stylesheet" href="lib/styles/hybrid.css">
+        <link rel="stylesheet" href="app-theme.css">
     </head>
     <body>
-        <h1>Twice-Over</h1>
+        <pre>
+        <code>
+                // Opens the given combo dropdown and clicks the item with the given text
+                function clickComboItem(comboComp, itemText, description) {
+                    return function (next) {
+                        t.chain({
+                            click: comboComp,
+                            desc: description
+                        }, function () {
+                            // Blar, combo boundlist items aren't components and don't have useful attributes on them, we have to scan through
+                            // every item and look for the one with the expected text content
+                            var items = Array.prototype.slice.call(comboComp.getPicker().el.dom.querySelectorAll('.x-boundlist-item'))
+                                .filter(function (item) {
+                                    return item.innerText === itemText;
+                                });
+                            if (items.length !== 1) {
+                                t.fail('Failed to find item "' + itemText + '" in the combo box!');
+                            }
+                            t.click(items[0], next);
+                        });
+                    };
+                }
+        </code>
+        </pre>
+        
+        <script src="lib/highlight.pack.js"></script>
+        
+        <script>
+            hljs.initHighlightingOnLoad();
+        </script>
     </body>
 </html>
