--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         </code>
         </pre>
         
+        <script src="lib/diff.js"></script>
         <script src="lib/highlight.pack.js"></script>
         <script src="app.js"></script>
     </body>
