added the file list pane and starting review object model

--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
         <link rel="stylesheet" href="app-theme.css">
     </head>
     <body>
-        <pre>
-        <code>
-        </code>
-        </pre>
+        <div class="container">
+            <div class="file-pane">
+            </div>
+            <pre class="code-pane">
+                <code></code>
+            </pre>
+        </div>
         
         <script src="lib/diff.js"></script>
         <script src="lib/highlight.pack.js"></script>
+        
+        <script src="util.js"></script>
+        <script src="iteration.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
