staging change in prep for moving global state into app.js

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <script src="lib/diff.js"></script>
         <script src="lib/highlight.pack.js"></script>
 
-        <script src="lib/require.js" data-main="App.js"></script>
+        <script src="lib/require.js" data-main="index.js"></script>
     </body>
 </html>
