heaving theming work and new typeface for the brand text

--- a/index.html
+++ b/index.html
@@ -3,20 +3,30 @@
     <head>
         <title>Twice-Over</title>
         <link rel="stylesheet" href="lib/styles/hybrid.css">
-        <link rel="stylesheet" href="app-theme.css">
+        <link rel="stylesheet" href="resources/app-theme.css">
     </head>
     <body>
-        <div class="container">
-            <div class="file-pane">
+        <div class="container-outer">
+            <div class="menu-bar">
+                Twice-Over
+                <div class="iteration">0</div>
+                <div class="iteration">1</div>
+                <div class="iteration">2</div>
+                <div class="iteration">3</div>
+                <div class="iteration">14</div>
+                <div class="iteration">27</div>
             </div>
-            <pre class="code-pane">
-                <code></code>
-            </pre>
+            <div class="container-inner">
+                <div class="file-pane">
+                </div>
+                <pre class="code-pane">
+                    <code></code>
+                </pre>
+            </div>
         </div>
 
 
-        <div class="dialog" style="display: none">
-        </div>
+        <div class="dialog" style="display: none"></div>
 
 
 
