added TFS change discovery and parsing
reworked the TFS integration to run as a series of chained promises
started on the changes tree control
added FontAwesome to use in the Changes tree control

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Twice-Over</title>
         <link rel="stylesheet" href="lib/styles/hybrid.css">
+        <link rel="stylesheet" href="resources/fontawesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="resources/app-theme.css">
     </head>
     <body>
