implemented "left", "line", "char", and "right" diff modes
- converted FileList and CodeViewer to Components

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
             </div>
             <div class="container-inner">
                 <div class="file-pane">
+                    <header></header>
+                    <content class="filler"></content>
+                    <footer>
+                        <button data-diffmode="left">left</button>
+                        <button data-diffmode="line">line</button>
+                        <button data-diffmode="char">char</button>
+                        <button data-diffmode="right">right</button>
+                    </footer>
                 </div>
                 <pre class="code-pane">
                     <code></code>
