further implementation of line highlighting
it's still not done, but getting closer. I really dislike the candy cane
effect when there are both adds and deletes on the same line, but don't
have anything better yet! Blar.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
                         <button data-diffmode="right">right</button>
                     </footer>
                 </div>
-                <pre class="code-pane">
-                    <code></code>
-                </pre>
+                <div class="code-pane">
+                    <pre>
+                        <code class="code-block">
+                        </code>
+                    </pre>
+                </div>
             </div>
         </div>
 
