added file path display to the top of the code pane
also added the "Add Comment" button when code is selected and fixed
several bugs in code selection

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                     </footer>
                 </div>
                 <div class="code-pane">
+                    <header>
+                        <button style="display: none">Add Comment</button>
+                        <div class="filler"></div>
+                    </header>
                     <pre>
                         <code class="code-block">
                         </code>
