--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
         <script src="lib/diff.js"></script>
         <script src="lib/highlight.pack.js"></script>
+        <script src="lib/spark-md5.min.js"></script>
 
         <script src="lib/require.js" data-main="index.js"></script>
     </body>
