added diff indicators to the code pane's scrollbar

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,10 @@
                     <pre>
                         <code class="code-block">
                         </code>
+                        <svg class="scroll-indicators">
+                            <g class="removed"></g>
+                            <g class="added"></g>
+                        </svg>
                     </pre>
                 </div>
             </div>
