added comment indicators to the code pane scrollbar

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
                         <svg class="scroll-indicators">
                             <g class="removed"></g>
                             <g class="added"></g>
+                            <g class="comments"></g>
                         </svg>
                     </pre>
                 </div>
