added a "Reivew Link" in the status page
...for easier code review sharing

--- a/app/index.html
+++ b/app/index.html
@@ -37,18 +37,24 @@
                     </pre>
                 </div>
                 <div class="review-status" style="display: none">
-                    <div class="review-status-left column filler">
-                        <label>Review Status</label>
-                        <div class="review-status-widget">
-                        </div>
+                    <div class="review-status-body">
+                        <div class="review-status-left column filler">
+                            <label>Review Status</label>
+                            <div class="review-status-widget">
+                            </div>
 
-                        <label>Reviewers</label>
-                        <div class="reviewer-widget">
+                            <label>Reviewers</label>
+                            <div class="reviewer-widget">
+                            </div>
+                        </div>
+                        <div class="review-status-right column filler">
+                            <label for="review-description-inplace">Description</label>
+                            <textarea id="review-description-inplace" class="filler"></textarea>
                         </div>
                     </div>
-                    <div class="review-status-right column filler">
-                        <label for="review-description-inplace">Description</label>
-                        <textarea id="review-description-inplace" class="filler"></textarea>
+                    <div class="review-status-footer">
+                        <label>Review Link</label>
+                        <input id="review-link-input" type="text" onclick="this.select()" readonly value="Hoiulekrjsodfulkejlkj" />
                     </div>
                 </div>
             </div>
